--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-google-docs",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Gatsby plugin to use Google Docs as a data source",
   "repository": "https://github.com/xuopled/gatsby-source-google-docs",
   "author": {
@@ -23,7 +23,8 @@
     "googleapis": "27",
     "json2md": "^1.6.2",
     "lodash": "^4.17.11",
-    "readline-sync": "^1.4.9"
+    "readline-sync": "^1.4.9",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
