--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-google-docs",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Gatsby plugin to use Google Docs as a data source",
   "repository": "https://github.com/xuopled/gatsby-source-google-docs",
   "author": {
@@ -13,6 +13,7 @@
     "gatsby",
     "gatsby-plugin",
     "gatsby-source",
+    "gatsby-source-plugin",
     "google",
     "google-docs",
     "docs",
