--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-react": "^7.20.6",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.7",
@@ -49,7 +50,8 @@
     "clean": "rm -rf ./gatsby-node.js ./utils",
     "prebuild": "yarn clean",
     "build": "cross-env BABEL_ENV=production babel src --out-dir . --ignore 'src/__tests__/*'",
-    "lint": "eslint --ext .js src",
+    "lint": "eslint src/**/*.js",
+    "lint2": "eslint example",
     "test": "jest",
     "prepublishOnly": "yarn build",
     "token": "./scripts/generate-token.js"
@@ -59,7 +61,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint"
+      "yarn lint"
     ],
     "*.{css,js,md}": [
       "prettier --write"
