--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "cross-env": "^7.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jest": "^23.7.0",
@@ -47,13 +43,9 @@
     "gatsby": "^2.0.0"
   },
   "scripts": {
-    "clean": "rm -rf ./gatsby-node.js ./utils",
-    "prebuild": "yarn clean",
-    "build": "cross-env BABEL_ENV=production babel src --out-dir . --ignore 'src/__tests__/*'",
-    "lint": "eslint src/**/*.js",
-    "lint2": "eslint example",
+    "lint": "eslint gatsby-node.js utils",
     "test": "jest",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "yarn lint && yarn test",
     "token": "./scripts/generate-token.js"
   },
   "bin": {
