--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,8 @@
     "gatsby": "^2.24.64",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-remark-images": "^3.3.30",
+    "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
     "react": "^16.12.0",
