--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop",
+    "docs2test": "NODE_ENV=DOCUMENT_TO_TESTS gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
