--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.1.1",
+    "@semantic-release/npm": "^7.0.6",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
@@ -40,7 +46,8 @@
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "semantic-release": "^17.1.2"
   },
   "peerDependencies": {
     "dotenv": "^8.2.0",
@@ -53,6 +60,7 @@
     "cz": "git-cz",
     "lint": "eslint gatsby-node.js utils example/src",
     "test": "jest --coverage",
-    "prepublishOnly": "yarn lint && yarn test"
+    "prepublishOnly": "yarn lint && yarn test",
+    "semantic-release": "semantic-release"
   }
 }
