--- a/example/package.json
+++ b/example/package.json
@@ -21,7 +21,7 @@
     "gatsby-transformer-remark": "^2.8.36",
     "gatsby-transformer-sharp": "^2.5.16",
     "prismjs": "^1.21.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "link:../node_modules/react",
+    "react-dom": "link:../node_modules/react-dom"
   }
 }
