--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "2.1.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "semantic-release": "^17.2.3"
   },
   "peerDependencies": {
