--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,6 @@
     "build": "gatsby build",
     "dev": "gatsby develop",
     "docs2test": "NODE_ENV=DOCUMENT_TO_TESTS gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -15,6 +14,7 @@
     "gatsby": "^2.24.66",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-sharp": "^2.6.37",
+    "gatsby-remark-gifs": "^1.0.0",
     "gatsby-remark-images": "^3.3.31",
     "gatsby-remark-prismjs": "^3.5.14",
     "gatsby-remark-strava": "^1.2.0",
