--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   ],
   "dependencies": {
     "@forivall/wyt": "^2.0.2",
-    "gatsby-source-filesystem": "^2.7.0",
-    "google-oauth2-env-vars": "^1.2.0",
-    "googleapis": "66.0.0",
-    "json2md": "^1.9.1",
+    "gatsby-plugin-webfonts": "^1.1.4",
+    "gatsby-source-filesystem": "^2.11.0",
+    "google-oauth2-env-vars": "^1.3.0",
+    "googleapis": "67.1.0",
+    "json2md": "^1.9.2",
     "lodash": "^4.17.20",
     "yamljs": "^0.3.0"
   },
@@ -36,20 +37,20 @@
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
-    "@semantic-release/npm": "^7.0.9",
+    "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.5",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jest": "^24.1.5",
+    "eslint-plugin-react": "^7.22.0",
+    "husky": "^4.3.6",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "semantic-release": "^17.3.0"
+    "semantic-release": "^17.3.9"
   },
   "peerDependencies": {
     "dotenv": "^8.2.0",
@@ -60,7 +61,7 @@
   },
   "scripts": {
     "cz": "git-cz",
-    "lint": "eslint gatsby-node.js utils example/src",
+    "lint": "eslint *.js utils examples/**/src",
     "test": "jest --coverage",
     "prepublishOnly": "yarn lint && yarn test",
     "semantic-release": "semantic-release"
