--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   ],
   "main": "index.js",
   "files": [
+    "index.d.ts",
+    "gatsby-browser.js",
     "gatsby-node.js",
+    "gatsby-ssr.js",
     "utils"
   ],
   "dependencies": {
