--- a/package.json
+++ b/package.json
@@ -25,17 +25,16 @@
   ],
   "dependencies": {
     "@forivall/wyt": "^2.0.2",
-    "gatsby-plugin-webfonts": "^1.1.4",
-    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-source-filesystem": "2.11.0",
     "google-oauth2-env-vars": "^1.3.0",
-    "googleapis": "67.1.0",
-    "json2md": "^1.9.2",
-    "lodash": "^4.17.20",
+    "googleapis": "67.1.1",
+    "json2md": "^1.10.0",
+    "lodash": "^4.17.21",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
@@ -43,17 +42,17 @@
     "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-jest": "^24.1.5",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.1.7",
     "eslint-plugin-react": "^7.22.0",
-    "husky": "^4.3.6",
+    "husky": "4.3.6",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "semantic-release": "^17.3.9"
+    "semantic-release": "^17.4.1"
   },
   "peerDependencies": {
     "dotenv": "^8.2.0",
