--- a/examples/website/package.json
+++ b/examples/website/package.json
@@ -12,24 +12,25 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^2.24.66",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-catch-links": "^2.10.0",
-    "gatsby-plugin-eslint": "^2.0.8",
-    "gatsby-plugin-layout": "^1.7.0",
-    "gatsby-plugin-mdx": "^1.7.1",
-    "gatsby-plugin-mdx-embed": "^0.0.17",
+    "gatsby": "^3.0.3",
+    "gatsby-plugin-catch-links": "^3.0.0",
+    "gatsby-plugin-eslint": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-layout": "^2.0.0",
+    "gatsby-plugin-mdx": "^2.0.0",
+    "gatsby-plugin-mdx-embed": "^0.0.19",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.37",
+    "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-theme-ui": "^0.3.5",
+    "gatsby-plugin-webfonts": "^2.0.0",
     "gatsby-remark-gifs": "^1.0.0",
-    "gatsby-remark-images": "^3.3.31",
-    "gatsby-remark-prismjs": "^3.5.14",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-prismjs": "^4.0.0",
     "gatsby-remark-unwrap-images": "^1.0.2",
-    "gatsby-transformer-remark": "^2.8.36",
-    "gatsby-transformer-sharp": "^2.5.16",
-    "mdx-embed": "^0.0.17",
-    "prismjs": "^1.21.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "mdx-embed": "^0.0.19",
+    "prismjs": "^1.23.0",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
     "react-icons": "^4.2.0",
