--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
     "utils"
   ],
   "dependencies": {
-    "gatsby-source-filesystem": "3.0.0",
+    "gatsby-source-filesystem": "3.6.0",
     "google-oauth2-env-vars": "^1.3.0",
-    "googleapis": "67.1.1",
+    "googleapis": "74.2.0",
     "json2md": "^1.10.0",
     "lodash": "^4.17.21",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.0",
-    "@semantic-release/npm": "^7.0.10",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.2",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-jest": "^24.2.0",
-    "eslint-plugin-react": "^7.22.0",
-    "husky": "4.3.6",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "semantic-release": "^17.4.1"
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-react": "^7.24.0",
+    "husky": "^6.0.0",
+    "jest": "^27.0.3",
+    "lint-staged": "^11.0.0",
+    "prettier": "2.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "semantic-release": "^17.4.3"
   },
   "peerDependencies": {
     "dotenv": "^8.2.0",
@@ -65,6 +65,8 @@
     "lint": "eslint *.js utils examples/**/src",
     "test": "jest --coverage",
     "prepublishOnly": "yarn lint && yarn test",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   }
 }
