--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: 14.9
 
 before_install:
-  - npm install -g codecov
+  - yarn global add codecov
 
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/.bin/codecov
