--- a/package.json
+++ b/package.json
@@ -24,38 +24,38 @@
     "utils"
   ],
   "dependencies": {
-    "gatsby-source-filesystem": "3.6.0",
+    "gatsby-source-filesystem": "4.0.0",
     "google-oauth2-env-vars": "^1.3.0",
-    "googleapis": "74.2.0",
-    "json2md": "^1.10.0",
+    "googleapis": "89.0.0",
+    "json2md": "^1.12.0",
     "lodash": "^4.17.21",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.3",
-    "@semantic-release/npm": "^7.1.3",
-    "@semantic-release/release-notes-generator": "^9.0.2",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/github": "^8.0.1",
+    "@semantic-release/npm": "^8.0.2",
+    "@semantic-release/release-notes-generator": "^10.0.2",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.27.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-react": "^7.26.1",
     "husky": "^6.0.0",
-    "jest": "^27.0.3",
-    "lint-staged": "^11.0.0",
-    "prettier": "2.3.0",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
+    "prettier": "2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "semantic-release": "^17.4.3"
+    "semantic-release": "^18.0.0"
   },
   "peerDependencies": {
     "dotenv": "^10.0.0",
-    "gatsby": "^2.0.0 || ^3.0.0"
+    "gatsby": "^2.0.0 || ^3.0.0 || ^4.0.0"
   },
   "bin": {
     "gatsby-source-google-docs-token": "./utils/generate-token.js"
