--- a/package.json
+++ b/package.json
@@ -24,28 +24,28 @@
     "utils"
   ],
   "dependencies": {
-    "gatsby-source-filesystem": "4.0.0",
+    "gatsby-source-filesystem": "4.1.2",
     "google-oauth2-env-vars": "^1.3.0",
-    "googleapis": "89.0.0",
+    "googleapis": "91.0.0",
     "json2md": "^1.12.0",
     "lodash": "^4.17.21",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "@semantic-release/changelog": "^6.0.0",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
+    "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.1",
-    "@semantic-release/git": "^10.0.0",
-    "@semantic-release/github": "^8.0.1",
-    "@semantic-release/npm": "^8.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^8.0.3",
     "@semantic-release/release-notes-generator": "^10.0.2",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.1.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-react": "^7.26.1",
-    "husky": "^6.0.0",
+    "eslint-plugin-jest": "^25.2.4",
+    "eslint-plugin-react": "^7.27.0",
+    "husky": "^7.0.0",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
     "prettier": "2.4.1",
@@ -54,8 +54,7 @@
     "semantic-release": "^18.0.0"
   },
   "peerDependencies": {
-    "dotenv": "^10.0.0",
-    "gatsby": "^2.0.0 || ^3.0.0 || ^4.0.0"
+    "gatsby": "^3.0.0 || ^4.0.0"
   },
   "bin": {
     "gatsby-source-google-docs-token": "./utils/generate-token.js"
