--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,14 +10,15 @@
     "token": "../../utils/generate-token.js"
   },
   "dependencies": {
-    "gatsby": "^4.0.1",
+    "gatsby": "^4.1.4",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-sharp": "^4.0.1",
-    "gatsby-remark-gifs": "^1.0.0",
-    "gatsby-remark-images": "^6.0.0",
+    "gatsby-plugin-image": "^2.1.2",
+    "gatsby-plugin-sharp": "^4.1.3",
+    "gatsby-remark-gifs": "^1.1.0",
+    "gatsby-remark-images": "^6.1.3",
     "gatsby-remark-unwrap-images": "^1.0.2",
-    "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
+    "gatsby-transformer-remark": "^5.1.3",
+    "gatsby-transformer-sharp": "^4.1.0",
     "react": "link:../../node_modules/react",
     "react-dom": "link:../../node_modules/react-dom"
   }
