chore: bump examples dependencies

--- a/examples/website/package.json
+++ b/examples/website/package.json
@@ -10,31 +10,33 @@
     "token": "../../utils/generate-token.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^4.1.4",
-    "gatsby-plugin-catch-links": "^4.1.0",
+    "gatsby": "^4.6.0",
+    "gatsby-plugin-catch-links": "^4.6.0",
     "gatsby-plugin-eslint": "^4.0.2",
-    "gatsby-plugin-image": "^2.1.2",
-    "gatsby-plugin-layout": "^3.1.0",
-    "gatsby-plugin-mdx": "^3.1.3",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-layout": "^3.6.0",
+    "gatsby-plugin-mdx": "^3.6.0",
     "gatsby-plugin-mdx-embed": "^0.0.22",
     "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-sharp": "^4.1.3",
-    "gatsby-plugin-theme-ui": "^0.12.0",
-    "gatsby-plugin-webfonts": "^2.1.1",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-theme-ui": "^0.13.1",
+    "gatsby-plugin-webfonts": "^2.2.1",
     "gatsby-remark-gifs": "^1.1.0",
-    "gatsby-remark-images": "^6.1.3",
-    "gatsby-remark-prismjs": "^6.1.0",
+    "gatsby-remark-images": "^6.6.0",
+    "gatsby-remark-prismjs": "^6.6.0",
     "gatsby-remark-unwrap-images": "^1.0.2",
-    "gatsby-transformer-remark": "^5.1.3",
-    "gatsby-transformer-sharp": "^4.1.0",
+    "gatsby-transformer-remark": "^5.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "mdx-embed": "^0.0.22",
-    "prismjs": "^1.25.0",
+    "prismjs": "^1.26.0",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
     "react-icons": "^4.3.1",
-    "theme-ui": "^0.12.0"
+    "theme-ui": "^0.13.1"
   },
   "devDependencies": {
     "eslint-loader": "^4.0.2",
