--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-google-docs",
-  "version": "2.4.2",
+  "version": "2.4.0",
   "description": "Gatsby plugin to use Google Docs as a data source",
   "repository": "https://github.com/cedricdelpoux/gatsby-source-google-docs",
   "author": "Cédric Delpoux <cedric.delpoux@gmail.com>",
@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "gatsby-source-filesystem": "5.8.0",
-    "google-oauth2-env-vars": "^1.4.0",
+    "google-oauth2-env-vars": "^1.3.0",
     "googleapis": "114.0.0",
     "json2md": "^2.0.0",
     "lodash": "^4.17.21",
@@ -45,7 +45,6 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
     "prettier": "2.8.7",
@@ -61,7 +60,6 @@
     "lint": "eslint *.js utils examples/**/src",
     "test": "jest --coverage",
     "prepublishOnly": "yarn lint && yarn test",
-    "semantic-release": "semantic-release",
-    "prepare": "husky install"
+    "semantic-release": "semantic-release"
   }
 }
